--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,11 @@
 }
 body {
   background-color: #cccccc;
-  background-image: url("fern.jpg");
+  background-image: url();
+  color: ;
 }
 h2 {
-  color: cyan;
+  color: #586a6e;
 }
 .header {
   color: red;
