add background image to the box and change text color to rgb(8,250,230)

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,10 @@ h2 {
   font-size: x-large;
 }
 .box {
+  background-image: url(../images/landscape.webp);
   border: solid brown;
   font-style: italic;
+  color: rgb(8, 250, 230);
 }
 .date {
   color: rgb(25, 160, 25);
